--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <div class="calculator">
+            <form>
+                <div class = "Display">
+                    <input type="test" name="Display">
+                </div>
+                <div>
+                    <input type="button" value="AC">
+                    <input type="button" value="DE">
+                    <input type="button" value=". ">
+                    <input type="button" value="/ ">
+
+                </div>
+                <div>
+                    <input type="button" value="7 ">
+                    <input type="button" value="8 ">
+                    <input type="button" value="9 ">
+                    <input type="button" value="* ">
+
+                </div>
+                <div>
+                    <input type="button" value="4 ">
+                    <input type="button" value="5 ">
+                    <input type="button" value="6 ">
+                    <input type="button" value="- ">
+
+                </div>
+                <div>
+                    <input type="button" value="1 ">
+                    <input type="button" value="2 ">
+                    <input type="button" value="3 ">
+                    <input type="button" value="+ ">
+
+                </div>
+                <div>
+                    <input type="button" value="00">
+                    <input type="button" value="0 ">
+                    <input type="button" value="= " class="size_of_button">
+
+
+                </div>
+            </form>
+        </div>
+    </div>
+
 </body>
+
+</html>
