add on hover colouring

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="calculator">
             <form>
                 <div class = "display">
-                    <input type="test" name="display" readonly>
+                    <input type="text" name="display" readonly>
                 </div>
                 <div>
                     <input type="button" value="AC" onclick="display.value = ''">
