--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <input type="button" value="/ " onclick="display.value += '/'">
 
                 </div>
-                <div class="button">
-                    <button class="button">7</button>
+                <div>
+                    <input type="button" value="7 " onclick="display.value += '7'">
                     <input type="button" value="8 " onclick="display.value += '8'">
                     <input type="button" value="9 " onclick="display.value += '9'">
                     <input type="button" value="* " onclick="display.value += '*'">
